SERVER-51796 Add missing comma to log message 22334